--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>Bienvenue sur ma page !</h1>
-    <p>Voici ce que je veux afficher :</p>
+    <p>Cette page contient beaucoup de choses intéressantes, enfin pas encore.</p>
 </body>
 </html>
